tests/files/flow_controller_tests/should_run/032.cmdr
x = parseFloat(8.0);
print x;