tests/files/flow_controller_tests/should_fail/061.cmdr
x = true;
print sinh(x);